syntax = "proto3";

option csharp_namespace = "KRKProfiles";

package profiles;

service Profile{
  rpc GetManyProfiles(GetManyProfilesRequest) returns (GetManyProfilesResponse) {}
  rpc GetOne(GetOneRequest) returns (GetOneResponse) {}
}


// Many
message GetManyProfilesRequest {
  repeated string ids = 1;
}
message GetManyProfilesResponse {
  repeated GrpcProfileModel profiles = 1;
}

// One
message GetOneRequest {
  string id = 1;
}
message GetOneResponse {
  optional GrpcProfileModel profile = 1;
}

message GrpcProfileModel {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string userName = 4;
  optional string profilePicture = 5;
  optional string coverPicture = 6;
}
